# rad-gateway

./: .env.example  .env.testing  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT-beta.md  DEPLOYMENT-docker.md  DEPLOYMENT.md  DEPLOYMENT_PLAN.md  Dockerfile  Dockerfile.binary  LICENSE  PROJECT_STATUS_AND_PLAN.md  README.md  RELEASE_NOTES.md  SECURITY.md  SPRINT_PLAN.md  STATUS.md  TEST-REPORT.md  coverage.out  go.mod  go.sum  package-lock.json  package.json  radgateway.db  radgateway.db-shm  radgateway.db-wal
.guardrails/: failure-registry.jsonl  team-layout-rules.json
.sisyphus/: boulder.json
certs/: ca.crt  ca.srl  client.crt  server.crt
config/: env.example  env.local
deploy/: README.md  deploy-to-target.sh  install.sh  uninstall.sh  validate.sh
docs/: STATUS.md  a2a-compliance-report.md  cors-setup.md  feature-matrix.md  getting-started.md  guardrails-adoption.md  implementation-plan.md  next-milestones.md  postgresql-enhancements.md  product-build-blueprint.md  product-theme.md  production-observability.md  protocol-stack-decision.md  recommendations-1-3-implementation.md  redis-caching.md  reverse-engineering-report.md  review-teams.md  team-structure-compliance.md  team-system-guide.md  team-updates-summary.md
filters/a2a-wasm/: Cargo.toml  Dockerfile  Makefile
filters/a2a-wasm/.cargo/: config.toml
filters/a2a-wasm/src/: a2a.rs  lib.rs  validation.rs
migrations/: 001_create_workspaces.sql  003_create_roles.sql  007_audit_log.sql  008_create_quotas.sql  009_create_usage.sql
scripts/: log_failure.py  test-local.sh  (+2 more)
(+758 files in other folders)
